force-app/main/default/objects/ucl_Client__c/ucl_Client__c.object-meta.xml
<CustomObject>
    <label>Client</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>