force-app/main/default/objects/ucl_Client__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Client_Number__c  &amp;  Legal_Advisor__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>