force-app/main/default/objects/ucl_Client__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>Client ID</label>
    <type>AutoNumber</type>
</CustomField>