force-app/main/default/objects/ucl_Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Clients</label>
</ListView>